tests/sksl/errors/golden/DivideByZero.glsl
### Compilation failed:

error: 1: division by zero
error: 2: division by zero
error: 3: division by zero
error: 4: division by zero
4 errors
